--- a/app/src/main/res/layout/activity_find_beer.xml
+++ b/app/src/main/res/layout/activity_find_beer.xml
@@ -20,10 +20,11 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="@string/find_beer"
         android:id="@+id/find_beer"
         android:layout_below="@+id/color"
         android:layout_alignLeft="@+id/color"
+        android:onClick="onClick"
          />
 
     <TextView
@@ -33,7 +34,7 @@
         android:layout_alignLeft="@+id/find_beer"
         android:layout_below="@+id/find_beer"
         android:layout_marginTop="18dp"
-        android:text="TextView"
+        android:text="@string/brands"
         />
 
 
