--- a/app/src/main/res/layout/activity_find_beer.xml
+++ b/app/src/main/res/layout/activity_find_beer.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:entries="@array/beer_colors"
         android:layout_marginTop="37dp" />
 
     <Button
@@ -24,7 +25,7 @@
         android:id="@+id/find_beer"
         android:layout_below="@+id/color"
         android:layout_alignLeft="@+id/color"
-        android:onClick="onClick"
+        android:onClick="onClickFindBeer"
          />
 
     <TextView
